- callback method SEPAEXEC of separator was split into two methods SEPAEXECLP and SEPAEXECSOL
- replaced method SCIPsepaWasDelayed() by SCIPsepaWasLPDelayed() and SCIPsepaWasSolDelayed()
- additional parameter "sol" for methods SCIPaddCut(), SCIPgetCutEfficacy(), and SCIPisCutEfficacious()
- additional parameter "sol" for method SCIPseparateKnapsackCover()

plugins:

parameters:

features:

fixed bugs:
- fixed bug in ZIMPL model reader with wrong chdir, if .zpl file is in current directory
- fixed bug in LP file reader with signed values without space between sign and value (e.g. "+2x" instead of "+ 2x")
- fixed various bugs in LP file reader
- also removed history_length, if NO_REMOVE_HISTORY is defined to support older versions of the readline library

known bugs:
- if one uses column generation and restarts, a solution that contains variables that are only present in the transformed
  problem (i.e., variables that were generated by a pricer) is not pulled back into the original space correctly, since
  the priced variables have no original counterpart


SCIP version 0.80
=================

interface:
- MAJOR CHANGE:
  preceeded all data types with "SCIP_" - you may use shell script reptypes_scip.sh to rename the SCIP data types in
  your own source code (But use with care! Create a backup copy of your source first!)
- additional parameter "validnode" for SCIPaddConsLocal() and SCIPaddConsNode()
- new method SCIPgetNConflictClausesApplied()
- new method SCIPdelVar()
- new method SCIPgetVarStrongbranchLPAge()
- new method SCIPgetNConflictClausesApplied()
- new event type SCIP_EVENTTYPE_VARDELETED
- new method SCIPconsGetValidDepth()
- new method SCIPhashtableExists()
- method SCIPhashtableRemove() can now also be called, if the element does not exist in the table
- new method SCIPhashmapExists()
- method SCIPhashmapRemove() can now also be called, if the element does not exist in the map
- new method SCIPvarIsTransformedOrigvar()
- new method SCIPvarIsDeleted()